Summary collapse animation fixed

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -951,8 +951,10 @@ h1,h2,h3,h4,h5,h6{
 			//margin-left:10px;
 			margin-bottom:20px;
 			height:auto;
-			&.hidden{
+			//max-height: 1000px;
+			&.collapsed{
 				margin-bottom:0;
+				max-height: 0;
 			}
 		}
 	}
